[package]
name = "sep-sys"
version = "1.1.1+1.0.0"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2018"
description = "Bindings to SEP - C library for Source Extraction and Photometry."
readme = "README.md"
repository = "https://github.com/RReverser/sep-sys"
keywords = ["astronomy", "photometry"]
categories = ["external-ffi-bindings", "algorithms", "science", "computer-vision"]
links = "sep"
license = "LGPL-3.0"

[build-dependencies]
cc = "1.0.67"
